# todo_list_bubble

./: CMakeLists.txt  CONTRIBUTING.md  README.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: cmake-multi-platform.yml
assets/: quad.fs  quad.vs  text.fs
backend/: CMakeLists.txt  bgui_backend_freetype.hpp  bgui_backend_glfw.hpp  bgui_backend_opengl3.hpp  bgui_backend_vulkan.hpp
backend/freetype/: CMakeLists.txt  bgui_backend_freetype.cpp
backend/gl3/: CMakeLists.txt  bgui_backend_gl3.cpp  gl3_shader.cpp  gl3_shader.hpp
backend/glfw/: CMakeLists.txt  bgui_backend_glfw.cpp
backend/opengl3/: CMakeLists.txt  bgui_backend_opengl3.cpp  opengl3_shader.cpp  opengl3_shader.hpp
backend/opengl3/glad/: glad.c  glad.h
backend/vulkan/: CMakeLists.txt  bgui_backend_vulkan.cpp
bgui/: CMakeLists.txt
bgui/include/: bgui.hpp  element.hpp
bgui/include/elem/: absolute_layout.hpp  button.hpp  element.hpp  layout.hpp  linear_layout.hpp  text.hpp  text_input.hpp
bgui/include/gl/: shader.hpp
bgui/include/os/: font.hpp
bgui/include/utils/: mat.hpp  material.hpp  theme.hpp  vec.hpp
bgui/source/: bgui.cpp  element.cpp
bgui/source/elem/: absolute_layout.cpp  button.cpp  element.cpp  hl.cpp  layout.cpp  linear_layout.cpp  text.cpp  text_input.cpp
bgui/source/gl/: shader.cpp
bgui/source/os/: font.cpp  os.cpp
bgui/source/utils/: material.cpp
core/include/: bgui.hpp
core/include/elem/: button.hpp  checkbox.hpp  element.hpp  input_area.hpp  text.hpp  text_input.hpp  window.hpp
core/include/lay/: layout.hpp  linear.hpp  modular.hpp  relative.hpp
core/include/os/: font.hpp  os.hpp  style_manager.hpp
core/include/utils/: draw.hpp  enums.hpp  mat.hpp  material.hpp  propertie.hpp  style.hpp  texture.hpp  theme.hpp  uid.hpp  vec.hpp
core/source/: bgui.cpp
core/source/elem/: button.cpp  checkbox.cpp  element.cpp  input_area.cpp  text.cpp  text_input.cpp  window.cpp
core/source/lay/: layout.cpp  linear.cpp  modular.cpp  relative.cpp
core/source/os/: font.cpp  os.cpp  style_manager.cpp
core/source/utils/: material.cpp  theme.cpp
exemples/: CMakeLists.txt
exemples/glfw_gl3/: CMakeLists.txt  main.cpp
exemples/glfw_opengl3/: CMakeLists.txt  main.cpp
exemples/glfw_vulkan/: CMakeLists.txt  main.cpp
include/: tlb.hpp
source/: main.cpp  tlb.cpp
tests/: CMakeLists.txt  all_tests.cpp  test_elem.cpp
tlb/: CMakeLists.txt
tlb/source/: main.cpp  tlb.cpp
